updated to jav-17